
  [ Raphael Geissert ]
  * invoke-rc.d: Fix behaviour when no start or stop symlink is found.
    Although update-rc.d(8) says that it is a common administration error to
    delete a start symlink instead of renaming it to make it a stop symlink,
    the default behaviour of invoke-rc.d in that case is not sensible, and
    leads to the init script being executed. (Closes: #546532)

 -- Martin Pitt <mpitt@debian.org>  Fri, 05 Feb 2016 12:41:40 +0100

init-system-helpers (1.28) unstable; urgency=medium

  [ Martin Pitt ]
  * invoke-rc.d: Fix actions to run under systemd if there is no init.d
    script. (Closes: #747851)
  * invoke-rc.d: Don't start systemd units which are disabled. Restart them
    only if they were already running (i. e. started manually by the admin).
    (Closes: #768450)
  * update-rc.d: Support /usr/lib/insserv/insserv location too, as with
    newer sysvinit versions.
  * Add autopkgtest which runs the tests in t/.
  * Drop Michael Stapelberg and Tollef Fog Heen from Uploaders:, they stopped
    systemd work long ago. Thanks for your great work in the past!
  * Run wrap-and-sort -at over our debian control files.

  [ Andreas Henriksson ]
  * Add support for -X option. (Closes: #760168)

  [ Michael Biebl ]
  * invoke-rc.d: Allow stop and status requests for masked systemd services.
    (Closes: #717109)

 -- Martin Pitt <mpitt@debian.org>  Fri, 05 Feb 2016 12:30:53 +0100

init-system-helpers (1.27) unstable; urgency=high

  Urgency high to not further delay the sysvinit migration to testing, and to
  avoid this going into testing with breaking file-rc.

  [ Martin Pitt ]
  * Add debian/clean to remove script/*1.p. (Closes: #812586)
  * Version the conflict to file-rc, 0.8.17 now works fine with the moved
    update-rc.d and invoke-rc.d.

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:35:49 +0100

init-system-helpers (1.26) unstable; urgency=medium

  * Drop upstart as an alternative init dependency, as the package got
    removed.