@@ -282,7 +282,13 @@ elif test ! -f "${INITDPREFIX}${INITSCRIPTID}" ; then
     ## Verifies if the given initscript ID is known
     ## For sysvinit, this error is critical
     printerror unknown initscript, ${INITDPREFIX}${INITSCRIPTID} not found.
-    exit 100
+    # If the init script doesn't exist, but the upstart job does, we
+    # defer the error exit; we might be running in a chroot and
+    # policy-rc.d might say not to start the job anyway, in which case
+    # we don't want to exit non-zero.
+    if [ ! -e "/etc/init/${INITSCRIPTID}.conf" ]; then
+	exit 100
+    fi
 fi
 
 ## Queries sysvinit for the current runlevel
